cancel execution mem report